force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Explanation_and_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Explanation_and_Instruction__c</fullName>
    <label>Explanation and Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Directions for Delivery</fullName>
            </value>
            <value>
                <fullName>Emergency Situation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>