force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Extended_Area__c.field-meta.xml
<CustomField>
    <fullName>Extended_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended Area</label>
    <type>Checkbox</type>
</CustomField>