force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Fraud_Intercept_Account_from_tracking__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Intercept_Account_from_tracking__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fraud Intercept Account # (from tracking</label>
    <length>6</length>
    <type>Text</type>
</CustomField>