force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Fraud_Intercept_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Intercept_Scenario__c</fullName>
    <label>Fraud Intercept Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No fraud due to Intercept</fullName>
            </value>
            <value>
                <fullName>Fraud due to Intercept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>