force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Fraud_Intercept_Shipper_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Intercept_Shipper_s_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fraud Intercept Shipper&apos;s Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>