force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/French_Contact_Required__c.field-meta.xml
<CustomField>
    <fullName>French_Contact_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>French Contact Required</label>
    <type>Checkbox</type>
</CustomField>