force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Funds_Missing_Not_Collected__c.field-meta.xml
<CustomField>
    <fullName>Funds_Missing_Not_Collected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funds Missing/Not Collected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>