force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/GSR_Issues__c.field-meta.xml
<CustomField>
    <fullName>GSR_Issues__c</fullName>
    <label>GSR Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund Not Received</fullName>
            </value>
            <value>
                <fullName>Wrong Amount Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>