force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Guaranteed_Service_Refund_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Service_Refund_Scenarios__c</fullName>
    <label>Guaranteed Service Refund Scenarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVP GSR Error Message</fullName>
            </value>
            <value>
                <fullName>Refund not Received / Wrong Amount Received</fullName>
            </value>
            <value>
                <fullName>Brokerage GSR</fullName>
            </value>
            <value>
                <fullName>Import Freight Collect GSRs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>