force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Have_Extrenal_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Have_Extrenal_Packaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Extrenal Packaging?</label>
    <type>Checkbox</type>
</CustomField>