force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Hold_for_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_for_Pickup_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hold for Pickup Date</label>
    <type>Date</type>
</CustomField>