force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/ICOD_Amount_Dispute__c.field-meta.xml
<CustomField>
    <fullName>ICOD_Amount_Dispute__c</fullName>
    <label>ICOD Amount Dispute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICOD payment in Portal</fullName>
            </value>
            <value>
                <fullName>Paid ICOD with Credit card over the phone invoice outstanding</fullName>
            </value>
            <value>
                <fullName>ICOD investigation required</fullName>
            </value>
            <value>
                <fullName>ICOD was paid to the driver at time of delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>