force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/ICOD_Investigation_Required__c.field-meta.xml
<CustomField>
    <fullName>ICOD_Investigation_Required__c</fullName>
    <label>ICOD Investigation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Certified</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
            <value>
                <fullName>Wrong amount</fullName>
            </value>
            <value>
                <fullName>Canada Post Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>