force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Import_Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Import_Billing_Terms__c</fullName>
    <label>Import Billing Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepaid</fullName>
            </value>
            <value>
                <fullName>Freight Collect</fullName>
            </value>
            <value>
                <fullName>Third Party Freight Collect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>