force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Import_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Import Date</label>
    <type>Date</type>
</CustomField>