force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Importer_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Importer_Company_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Importer Company Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>