force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Improper_Return_Request__c.field-meta.xml
<CustomField>
    <fullName>Improper_Return_Request__c</fullName>
    <label>Improper Return Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Package Returned to Shipper (Consignee Calling)</fullName>
            </value>
            <value>
                <fullName>Package Returned to Shipper (Shipper Calling)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>