force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Incentive_Discount_Request__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Discount_Request__c</fullName>
    <label>Incentive Discount Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New incentives/discounts</fullName>
            </value>
            <value>
                <fullName>Renewal of expired incentives/discounts</fullName>
            </value>
            <value>
                <fullName>Goodwill Request for SCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>