force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Incident_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Time__c</fullName>
    <label>Incident Time</label>
    <type>Time</type>
</CustomField>