force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Incident_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Transaction_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incident/Transaction Date</label>
    <type>Date</type>
</CustomField>