force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Infonotice_Issue__c.field-meta.xml
<CustomField>
    <fullName>Infonotice_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infonotice Issue?</label>
    <type>Checkbox</type>
</CustomField>