force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/InfoNotice_Number__c.field-meta.xml
<CustomField>
    <fullName>InfoNotice_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InfoNotice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>