force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Information_for_Driver__c.field-meta.xml
<CustomField>
    <fullName>Information_for_Driver__c</fullName>
    <label>Information for Driver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Account Resumed</fullName>
            </value>
            <value>
                <fullName>Daily Pickup Temporary Time Change</fullName>
            </value>
            <value>
                <fullName>Pickup Information</fullName>
            </value>
            <value>
                <fullName>Large Shipment</fullName>
            </value>
            <value>
                <fullName>Excess Supplies Retrieval</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>