force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Intercept_Date__c.field-meta.xml
<CustomField>
    <fullName>Intercept_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intercept Date</label>
    <type>Date</type>
</CustomField>