force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Intercept_Type__c.field-meta.xml
<CustomField>
    <fullName>Intercept_Type__c</fullName>
    <label>Intercept Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will Call</fullName>
            </value>
            <value>
                <fullName>SDWC</fullName>
            </value>
            <value>
                <fullName>Future Delivery</fullName>
            </value>
            <value>
                <fullName>Alternate Address</fullName>
            </value>
            <value>
                <fullName>Return to Shipper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>