force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/International_Pkg_Type__c.field-meta.xml
<CustomField>
    <fullName>International_Pkg_Type__c</fullName>
    <label>International Pkg Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>