force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Investigation_Date__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Investigation Date</label>
    <type>Date</type>
</CustomField>