force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Investigation_Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Inquiry_Type__c</fullName>
    <label>Investigation Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change bill terms</fullName>
            </value>
            <value>
                <fullName>Add. Info for Open/Cancel Investi.</fullName>
            </value>
            <value>
                <fullName>COD related issues</fullName>
            </value>
            <value>
                <fullName>Delivered - Recipient Denies Receipt of Signature</fullName>
            </value>
            <value>
                <fullName>Driver Release - Consignee Denies Receipt</fullName>
            </value>
            <value>
                <fullName>Export Investigation Status Inquiry</fullName>
            </value>
            <value>
                <fullName>Open an Investigation</fullName>
            </value>
            <value>
                <fullName>Open an Investigation without Tracking#</fullName>
            </value>
            <value>
                <fullName>Written POD required and no signature available in IVP</fullName>
            </value>
            <value>
                <fullName>Re-open an Investi.</fullName>
            </value>
            <value>
                <fullName>No Information Found</fullName>
            </value>
            <value>
                <fullName>Billing Info Activity Only</fullName>
            </value>
            <value>
                <fullName>Lost in Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>