force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Investigation_Inquiry_Type_ASIA__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Inquiry_Type_ASIA__c</fullName>
    <label>Investigation Inquiry Type (ASIA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Info for Investigation</fullName>
            </value>
            <value>
                <fullName>Acknowledge Received / Cancel Investigation</fullName>
            </value>
            <value>
                <fullName>Investigation Status Inquiry</fullName>
            </value>
            <value>
                <fullName>No Shipper Contact - Investigation Pass 8 days</fullName>
            </value>
            <value>
                <fullName>Re-open Closed Positive Investigation</fullName>
            </value>
            <value>
                <fullName>Security Hold - Need Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>