force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Invoice_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Scenarios__c</fullName>
    <label>Invoice Scenarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Unavailable in FBR</fullName>
            </value>
            <value>
                <fullName>Unapplied Credit / Paid Twice</fullName>
            </value>
            <value>
                <fullName>Freight Collect Amendment Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>