force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/IVP_GSR_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>IVP_GSR_Error_Message__c</fullName>
    <label>IVP GSR Error Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVP/eTT</fullName>
            </value>
            <value>
                <fullName>IVP/eTT for UPS Store GSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>