force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/KR_Supply_Order__c.field-meta.xml
<CustomField>
    <fullName>KR_Supply_Order__c</fullName>
    <label>KR Supply Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPS Envelope - QTY (Free Text)</fullName>
            </value>
            <value>
                <fullName>UPS PAK</fullName>
            </value>
            <value>
                <fullName>BOX 1.  31 X 22 X 6</fullName>
            </value>
            <value>
                <fullName>Others (if selected add to Summary/Details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>