force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Label_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Label_Error_Message__c</fullName>
    <label>Label Error Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply order can&apos;t be processed for this account - please call 1-888-XXX- XXXX</fullName>
            </value>
            <value>
                <fullName>Not available for shipper</fullName>
            </value>
            <value>
                <fullName>Shipper not allowed to order any items</fullName>
            </value>
            <value>
                <fullName>This item not available for shipper</fullName>
            </value>
            <value>
                <fullName>Items in this group are not available for shipper</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>