force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Latest_Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Pickup_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Pickup Time</label>
    <length>11</length>
    <type>Text</type>
</CustomField>