force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Letter_of_Authorization_LOA__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Authorization_LOA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter of Authorization (LOA)</label>
    <type>Checkbox</type>
</CustomField>