force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License Plate Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>