force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Locker_Bay__c.field-meta.xml
<CustomField>
    <fullName>Locker_Bay__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Locker Bay #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>