force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Lost_pkg_Other_Investigation_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Lost_pkg_Other_Investigation_Scenario__c</fullName>
    <label>Lost pkg / Other Investigation Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost Package</fullName>
            </value>
            <value>
                <fullName>Investigation Status Inquiry</fullName>
            </value>
            <value>
                <fullName>Cancel an Import Investigation</fullName>
            </value>
            <value>
                <fullName>Re-open a Closed Positive Investigation</fullName>
            </value>
            <value>
                <fullName>Written Proof of Delivery</fullName>
            </value>
            <value>
                <fullName>Misdelivered Package</fullName>
            </value>
            <value>
                <fullName>Driver Release (Improper or Not Released)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>