force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Method_of_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Adjustment__c</fullName>
    <label>Method of Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Card Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>