force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Mis_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Mis_Delivery_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mis-Delivery Date</label>
    <type>Date</type>
</CustomField>