force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Mis_Delivery_Request__c.field-meta.xml
<CustomField>
    <fullName>Mis_Delivery_Request__c</fullName>
    <label>Mis-Delivery Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unintended Recipient</fullName>
            </value>
            <value>
                <fullName>Intended Recipient or Shipper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>