force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Missed_DCO_DCR_or_Intercept_Type__c.field-meta.xml
<CustomField>
    <fullName>Missed_DCO_DCR_or_Intercept_Type__c</fullName>
    <label>Missed DCO/DCR or Intercept Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hold at UPS Location (UPS Customer Center)</fullName>
            </value>
            <value>
                <fullName>Hold at UPS Location (UPS Access Point)</fullName>
            </value>
            <value>
                <fullName>Change Delivery Address</fullName>
            </value>
            <value>
                <fullName>Change Delivery Date</fullName>
            </value>
            <value>
                <fullName>Redeliver to My Address</fullName>
            </value>
            <value>
                <fullName>Return to Sender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>