force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Name_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Name_Employee_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name/Employee #/ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>