force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Name_on_My_Choice_Letter__c.field-meta.xml
<CustomField>
    <fullName>Name_on_My_Choice_Letter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name on My Choice Letter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>