force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/New_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>