force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/New_Broker__c.field-meta.xml
<CustomField>
    <fullName>New_Broker__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Broker</label>
    <length>50</length>
    <type>Text</type>
</CustomField>