force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/New_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>