force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Number_of_Packages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Packages__c</fullName>
    <label>Number of Packages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>