force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/of_Prepaid_Products_Minimum_of_25__c.field-meta.xml
<CustomField>
    <fullName>of_Prepaid_Products_Minimum_of_25__c</fullName>
    <label># of Prepaid Products (Minimum of 25)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>