force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status is Pending</fullName>
            </value>
            <value>
                <fullName>Order has been picked up by the driver</fullName>
            </value>
            <value>
                <fullName>Order has been received at dispatch</fullName>
            </value>
            <value>
                <fullName>Order has been dispatched to the driver</fullName>
            </value>
            <value>
                <fullName>Order was not picked up by the driver</fullName>
            </value>
            <value>
                <fullName>Cancelled Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>