force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Original_Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Original_Appointment_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Appointment Date/Time</label>
    <type>DateTime</type>
</CustomField>