force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Original_Issue_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Original_Issue_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Issue Resolved?</label>
    <type>Checkbox</type>
</CustomField>