force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Other_Exception__c.field-meta.xml
<CustomField>
    <fullName>Other_Exception__c</fullName>
    <label>Other-Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Without further information and the package is still at the destination center</fullName>
            </value>
            <value>
                <fullName>Customer disputes reason for non-delivery that may impact future delivery attempts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>