force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Other_Exception_Request__c.field-meta.xml
<CustomField>
    <fullName>Other_Exception_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Exception Request?</label>
    <type>Checkbox</type>
</CustomField>