force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Package_Retrieval_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Package_Retrieval_Inquiry__c</fullName>
    <label>Package Retrieval Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2nd Reqest DCR</fullName>
            </value>
            <value>
                <fullName>Held Past 10 Days or 14 Days - No New Scans</fullName>
            </value>
            <value>
                <fullName>Extend Hold Past 10 Days or 14 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>