force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Package_RTS_Request__c.field-meta.xml
<CustomField>
    <fullName>Package_RTS_Request__c</fullName>
    <label>Package RTS Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consignee Calling</fullName>
            </value>
            <value>
                <fullName>Shipper Calling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>