force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Package_Size__c.field-meta.xml
<CustomField>
    <fullName>Package_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Package Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>