force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Package_Status__c.field-meta.xml
<CustomField>
    <fullName>Package_Status__c</fullName>
    <label>Package Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Not Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>