force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Package(s)</fullName>
            </value>
            <value>
                <fullName>Pallet(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>