force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Partial_Shipment_ID_if_available__c.field-meta.xml
<CustomField>
    <fullName>Partial_Shipment_ID_if_available__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partial Shipment ID (if available)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>