force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Payment_Application__c.field-meta.xml
<CustomField>
    <fullName>Payment_Application__c</fullName>
    <label>Payment Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Application Issues</fullName>
            </value>
            <value>
                <fullName>Payment Sent / Not Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>